# food_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: interview-highlights.md
examples/: all_cuisines_smoke.py  amap_master_smoke.py  amap_real_smoke.py  analyzer_master_smoke.py  e2e_real_llm.py  e2e_smoke.py  ltm_smoke.py  manual_llm_test.py  test_fixes.py  test_qwen_bug.py
specs/: 01-prd.md  02-architecture.md  03-data-model.md  04-architecture-current.md  progress.md
src/food_agent/: __init__.py  __main__.py  cli.py  exceptions.py  llm.py  master.py  registry.py  web.py
src/food_agent/agents/: __init__.py  base.py
src/food_agent/agents/analyzers/: __init__.py  base.py  dietary.py  ip.py  location.py  weather.py
src/food_agent/agents/cuisines/: __init__.py  anhui.py  cantonese.py  chinese_fastfood.py  dessert_drink.py  fujian.py  hunan.py  japanese.py  jiangsu.py  shandong.py  sichuan.py  snack.py  western.py  western_fastfood.py  zhejiang.py
src/food_agent/config/: __init__.py  cuisines.yaml  loader.py  settings.yaml
src/food_agent/config/prompts/: anhui_v1.md  cantonese_v1.md  chinese_fastfood_v1.md  dessert_drink_v1.md  fujian_v1.md  hunan_v1.md  japanese_v1.md  jiangsu_v1.md  master_v1.md  shandong_v1.md  sichuan_v1.md  snack_v1.md  western_fastfood_v1.md  western_v1.md  zhejiang_v1.md
src/food_agent/data/: __init__.py
src/food_agent/data/cuisines/: anhui.md  cantonese.md  chinese_fastfood.md  dessert_drink.md  fujian.md  hunan.md  japanese.md  jiangsu.md  shandong.md  sichuan.md  snack.md  western.md  western_fastfood.md  zhejiang.md
src/food_agent/mcp/: __init__.py  amap_client.py
src/food_agent/memory/: __init__.py  long_term.py  schema.sql  short_term.py
src/food_agent/skills/: __init__.py
src/food_agent/tools/: __init__.py  base.py  cuisine_consult.py  location.py
src/food_agent/utils/: __init__.py
tests/: __init__.py  conftest.py  test_all_cuisines.py  test_amap_client.py  test_analyzers.py  test_cli.py  test_cli_web_stub.py  test_config_loader.py  test_cuisine_agent.py  test_cuisine_consult_tool.py  test_exceptions.py  test_llm.py  test_location_tool.py  test_long_term.py  test_master_agent.py  test_master_location_integration.py  test_registry.py  test_robust_tool_caller.py  test_short_term.py  test_web.py
