[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "food-agent"
version = "0.1.0"
description = "多 Agent 美食推荐系统 - 地球顶级美食家主厨调度 14 个菜系专家 + 8 维分析"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Food Agent Contributors"},
]
keywords = ["agent", "food", "recommendation", "qwen-agent", "mcp"]

dependencies = [
    "qwen-agent[gui,mcp]>=0.0.20",
    "openai>=1.50.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rich>=13.0",
    "gradio>=4.0",
    "tenacity>=8.2",
    "pybreaker>=1.0",
    "diskcache>=5.6",
    "mcp>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "vcrpy>=6.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
food-agent = "food_agent.cli:main"
food-agent-web = "food_agent.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"food_agent" = [
    "config/*.yaml",
    "config/prompts/*.md",
    "mcp/*.json",
    "data/*.json",
    "data/cuisines/*.md",
]

# ---- pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=food_agent",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:qwen_agent.*",
]

# ---- ruff -------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]  # 允许长行；B008 是函数默认参数依赖

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "RUF001", "RUF002", "RUF003"]            # 测试中允许 assert 和中文标点
"src/**/__init__.py" = ["RUF002"]                              # docstring 允许中文标点

# ---- mypy -------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "examples/"]
